# quick-cache

./: .gitignore  Cargo.toml  LICENCE.md  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs  placeholder_async_bench.rs  placeholder_bench.rs
examples/: custom_weight.rs  equivalent.rs  eviction_listener.rs  memory_used_plot.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_cache.rs  fuzz_linked_slab.rs  fuzz_sync_cache.rs  fuzz_unsync_cache.rs  fuzz_unsync_cache_pinstate.rs
src/: lib.rs  linked_slab.rs  options.rs  placeholder.rs  rw_lock.rs  sentinel.rs  shard.rs  shim.rs  shuttle_tests.rs  sync.rs  sync_placeholder.rs  unsync.rs
tools/: Cargo.toml
tools/src/: memory_used_plot.rs
