[package]
name = "quick_cache"
version = "0.6.18"
edition = "2021"
description = "Lightweight and high performance concurrent cache"
repository = "https://github.com/arthurprs/quick-cache"
authors = ["Arthur Silva <arthurprs@gmail.com>"]
license = "MIT"
keywords = ["lru", "concurrent", "cache", "s3-fifo", "clock"]
categories = ["caching", "concurrency", "data-structures"]
readme = "README.md"
exclude = ["fuzz"]
rust-version = "1.71"

[features]
default = ["ahash", "parking_lot"]
shuttle = ["dep:shuttle"]
stats = []

[dependencies]
ahash = { optional = true, version = "0.8" }
equivalent = "1.0"
hashbrown = { version = "0.16", default-features = false, features = ["inline-more"] }
parking_lot = { optional = true, version = "0.12" }
shuttle = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.7"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "placeholder_bench"
harness = false

[[bench]]
name = "placeholder_async_bench"
harness = false

[profile.shuttle]
inherits = "test"
opt-level = 3

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[package.metadata.docs.rs]
features = ["stats"]
rustdoc-args = ["--cfg", "docsrs"]
